<resources xmlns:tools="http://schemas.android.com/tools">
    <!--Navnet på app'en-->
    <string name="app_name">BeSammen</string>

    <string name="password" />
    <string name="email" />
    <string name="login" />
    <string name="Oprettelse" />

    <!--Indstillinger-->
    <string name="be" tools:ignore="DuplicateDefinition">Be</string>
    <string name="sammen" tools:ignore="DuplicateDefinition">Sammen</string>
    <string name="indstillinger">Indstillinger</string>
    <string name="profil_indstillinger.">Profil indstillinger</string>
    <string name="v_lg_sprog">Vælg sprog</string>
    <string name="sprog">Sprog</string>
    <string name="generelt">Generelt</string>
    <string name="log_ud">Log ud</string>
    <string name="tema">Tema</string>
    <string name="darkmode">Darkmode</string>


    <!--Profil-->
    <string name="skriv_til_mig">Skriv til mig, og vi kan mødes til en kop kaffe!</string>
...
    <string name="anna_21">Anna 21</string>
    <string name="profil">Profil</string>

    <!--Forside-->
    <string name="login_email">Email</string>
    <string name="login_password">Kodeord</string>
    <string name="login_button">Log ind</string>
    <string name="forgot_password">Har du glemt din adganskode?</string>
    <string name="createAnAccount">Opret bruger</string>
    <string name="besammen_text">BeSammen</string>

    <!--Opret bruger forside-->
    <string name="description_group">Fortæl os om dig selv! Vi vil gerne tildele dig den bedst mulige BeSammen-gruppe</string>
...
