...
        android:id="@+id/linearLayout5"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="100dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#E2FFDD"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_settings" />

...
