...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="95sp"
                    android:backgroundTint="#0C4819"
                    android:text="@string/log_ud" />
            </LinearLayout>
...
